# PucMinas-Pro.Flu.Dis.Con.Dad-ProjetoFinal

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: main.py  mongo_db.py
make-lib/: checks.mk  environment.mk  integrations.mk  run.mk  servers.mk
processing/: generation_of_recommendations.py
